--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -68,7 +68,7 @@
                 <select id="examples">
                     <option value="">Select an example</option>
                     <option value="What is sum of emission of CO2 for industry between year 2009 and 2011">What is sum of emission of CO2 for industry between year 2009 and 2011</option>
-                    <option value="What was average contamination in lead in soil in 2022?">What was average contamination in lead in soil in 2022?</option>
+                    <option value="What was average contamination in soil with lead in 2009?">What was average contamination in soil with lead in 2009?</option>
                     <option value="What percentage of emission was from N2O and CH4 compared to total emission?">What percentage of emission was from N2O and CH4 compared to total emission?</option>
                     <option value="what swiss bathing stations had poor water quality in 2020?">What swiss bathing stations had poor water quality in 2020?</option>
                     <option value="what bathing stations are there?">What bathing stations are there?</option>
